fix(css): adjust styles and fix layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 /* ========================================== TAILWIND STYLES */
 @layer base {
+
   /* Remove scrollbar */
   .remove-scrollbar::-webkit-scrollbar {
     width: 0px;
@@ -27,6 +28,7 @@
 }
 
 @layer utilities {
+
   /* ===== UTILITIES */
   .sidebar {
     @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black-800 px-7 py-10;
@@ -49,7 +51,7 @@
   }
 
   .header {
-    @apply text-32-bold md:text-36-bold;
+    @apply text-28-bold md:text-28-bold;
   }
 
   .sub-header {
@@ -105,7 +107,7 @@
 
   /* ==== File Upload */
   .file-upload {
-    @apply text-12-regular flex cursor-pointer  flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-500 bg-dark-400 p-5;
+    @apply text-12-regular flex cursor-pointer flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-500 bg-dark-400 p-5;
   }
 
   .file-upload_label {
@@ -147,6 +149,10 @@
 
   .text-24-bold {
     @apply text-[24px] leading-[28px] font-bold;
+  }
+
+  .text-28-bold {
+    @apply text-[28px] leading-[32px] font-bold;
   }
 
   .text-32-bold {
@@ -219,7 +225,7 @@
   }
 
   .shad-select-trigger {
-    @apply bg-dark-400  placeholder:text-dark-600 border-dark-500 h-11 focus:ring-0 focus:ring-offset-0 !important;
+    @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 h-11 focus:ring-0 focus:ring-offset-0 !important;
   }
 
   .shad-select-content {
@@ -273,7 +279,7 @@
 
   /* =====  REACT DATE PICKER OVERRIDES */
   .date-picker {
-    @apply overflow-hidden border-transparent w-full placeholder:text-dark-600  h-11 text-14-medium rounded-md px-3 outline-none !important;
+    @apply overflow-hidden border-transparent w-full placeholder:text-dark-600 h-11 text-14-medium rounded-md px-3 outline-none !important;
   }
 }
 
